Settings alignment fix!?

--- a/components/settings/single-sub.module.css
+++ b/components/settings/single-sub.module.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: space-between;
   cursor: pointer;
+  position: relative;
   width: 210px;
   border-radius: 50px;
   padding: 7px;
@@ -46,6 +47,20 @@
 
 .subActiveEdit {
   display: flex;
+  position: absolute;
+  right: 10px;
+  top: 21.5%;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin-right: 12px;
+}
+
+.subActiveEditClicked {
+  display: flex;
+  position: absolute;
+  left: 40%;
+  top: 43%;
   flex-direction: column;
   justify-content: center;
   text-align: center;
